Quản lý kho hàng

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -50,13 +50,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "6mb",
+                  "maximumError": "8mb"
                 }
               ],
               "outputHashing": "all"
