--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
+    "html2pdf.js": "^0.14.0",
     "jquery": "^3.7.1",
+    "jsbarcode": "^3.12.3",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "ng2-charts": "^4.1.1",
